--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,687 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--font-basic), Arial, sans-serif;
+  font-variation-settings: 'wght' var(--font-basic-weight-text);
+  color: var(--theme-mainColor);
+  background-color: var(--background-color);
+  background-size: cover;
+  background-image: var(--background-image-1), var(--background-image-2);
+  background-position: center;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+/* Экраны меньше ширины 375px */
+
+@media (width <= 375px) {
+  .header {
+    width: 100%;
+  }
+
+  .header__title {
+    margin-block-start: 120px;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  .main {
+    gap: 50px;
+  }
+
+  .footer__button {
+    flex-direction: column;
+    width: 306px;
+    height: 80px;
+  }
+
+  .footer__button__img {
+    width: 28px;
+    height: 28px;
+    top: 15px;
+    left: 138px;
+  }
+  
+  .footer__button__text {
+    top: 51px;
+    left: 19.5px;
+  }
+
+  .popup {
+    width: 341px;
+    height: 195px;
+  }
+
+  .popup-button {
+    width: 257px;
+  }
+
+  .popup-container {
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+  }
+
+}
+
+@media (width > 375px) {
+  .header {
+    width: clamp(var(--header-block-min), var(--header-block-mid), var(--header-block-max));
+  }
+
+  .header__title {
+    margin-block-start: 136px;
+  }
+
+  .card {
+    width: clamp(var(--header-block-min), var(--header-block-mid), var(--header-block-max));
+  }
+
+  .main {
+    gap: 57px;
+  }
+
+  .footer__button {
+    flex-direction: row;
+    width: 335px;
+    height: 51px;
+  }
+
+  .footer__button__img {
+    width: 21px;
+    height: 21px;
+    top: 13px;
+    left: 21px;
+  }
+  
+  .footer__button__text {
+    top: 18.5px;
+    left: 50px;
+  }
+
+  .popup {
+    width: 357px;
+    height: 193px;
+  }
+
+  .popup-button {
+    width: 293px;
+  }
+
+  .popup-container {
+    margin-inline-start: 29px;
+    margin-inline-end: 29px;
+  }
+
+}
+
+.header {
+  text-align: center;
+  border: 2px solid var(--theme-mainColor);
+  background-color: var(--background-color);
+  margin-block-start: 102px;
+}
+
+.header__title {
+  color: var(--theme-mainColor);
+  font-family: "Press Start 2P";
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.header__text {
+  color: var(--theme-mainColor);
+  font-family: "Press Start 2P";
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-block-start: 20px;
+}
+
+.letter__accent {
+  text-transform: lowercase;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-block-start: 25px;
+  margin-block-end: 25px;
+}
+
+.theme-menu__button {
+  position: relative;
+  padding: 0;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.theme-menu__button:hover {
+  animation: opacity 0.3s ease forwards;
+}
+
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: var(--theme-mainColor);
+  animation: decorline__out 0.3s ease forwards;
+}
+
+.theme-menu__button:disabled {
+  animation: opacity 0.3s ease forwards;
+  pointer-events: none;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  animation: opacity 0.3s ease forwards;
+}
+
+.theme-menu__button:hover::after {
+  animation: decorline__in 0.3s ease forwards;
+}
+
+.theme-menu__button:focus::after {
+  animation: decorline__in 0.3s ease forwards;
+}
+
+@keyframes opacity {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.6;
+  }
+}
+
+@keyframes decorline__out {
+  from {
+    width: 100%;
+    right: 0%;
+  }
+  to {
+    width: 0%;
+    left: 0%;
+  }
+}
+
+@keyframes decorline__in {
+  from {
+    width: 0%;
+    left: 0%;
+  }
+  to {
+    width: 100%;
+    right: 0%;
+  }
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶';
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  top: 3px;
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  animation: arrow 0.5s infinite ease-in-out;
+}
+
+@keyframes arrow {
+  from {
+    left: -18px;
+  }
+  to {
+    left: -22px;
+  }
+}
+
+.main {
+  margin-block-start: 104px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  border: 2px solid var(--theme-mainColor);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-color);
+}
+
+.section__title {
+  margin-inline-start: 10px;
+  margin-inline-end: 10px;
+  margin-block-start: 5px;
+  margin-block-end: 5px;
+  color: var(--theme-mainColor);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 785;
+  line-height: normal;
+}
+
+.picture {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border-top: 2px solid var(--theme-mainColor);
+  border-bottom: 2px solid var(--theme-mainColor);
+}
+
+.filter-2 {
+  filter: brightness(200%);
+}
+
+.filter-3 {
+  filter: contrast(50%);
+}
+
+.filter-4 {
+  filter: blur(0.5rem);
+}
+
+.filter-5 {
+  filter: invert(80%);
+}
+
+.filter-6 {
+  filter: grayscale(0.8);
+}
+
+.filter-7 {
+  filter: opacity(0.7);
+}
+
+.filter-8 {
+  filter: saturate(150%);
+}
+
+.picture__text {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  color: var(--theme-mainColor);
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+  text-shadow: -1px 0 var(--background-color), 0 1px var(--background-color), 1px 0 var(--background-color), 0 -1px var(--background-color);
+}
+
+@supports((text-stroke: 1px var(--background-color)) or (-webkit-text-stroke: 1px var(--background-color))) {
+  .picture__text {
+      -webkit-text-stroke: 1px var(--background-color);
+      text-stroke: 1px var(--background-color);
+      text-shadow: none;
+  }
+} 
+
+.picture-fit {
+  object-fit: cover;
+  object-position: center;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.section__text {
+  margin-inline-start: 25px;
+  margin-inline-end: 25px;
+  margin-block-start: 25px;
+  color: var(--theme-mainColor);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 465;
+  line-height: 21px;
+}
+
+.section__for-user {
+  margin-inline-start: 25px;
+  margin-inline-end: 25px;
+  margin-block-start: 27px;
+  color: var(--theme-mainColor);
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 465;
+  line-height: 21px;
+}
+
+.main-section__button {
+  margin-block-start: 25px;
+  margin-block-end: 25px;
+  margin-inline-end: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  gap: 12px;
+  padding: 0;
+}
+
+.heart__button {
+  background-color: var(--background-color);
+  cursor: pointer;
+  outline: none;
+  border: none;
+  height: 38px;
+  transition: border 0.3s ease, fill 3s;
+}
+
+.heart__button:focus {
+  outline: none;
+  border: none;
+}
+
+.heart__button:focus-visible {
+  outline: none;
+  border: 2px solid var(--theme-mainColor);
+}
+
+.heart-svg {
+  width: 39px;
+  height: 36px;
+}
+
+/* состояния после наведения и активации */
+
+.heart__button .like-icon .heart .core {
+  fill: var(--background-color);
+  transition: fill 0.3s 0.03s;
+}
+
+.heart__button:hover .like-icon .heart .core {
+  fill: var(--theme-mainColor);
+  transition: fill 0.3s;
+}
+
+.heart__button:active .like-icon .heart .core {
+  fill: var(--heart-fill);
+  transition: fill 0.3s;
+}
+
+.heart__button .like-icon .heart .main-body {
+  fill: var(--background-color);
+  transition: fill 0.3s;
+}
+
+.heart__button:hover .like-icon .heart .main-body {
+  fill: var(--theme-mainColor);
+  transition: fill 0.3s 0.05s;
+}
+
+.heart__button:active .like-icon .heart .main-body {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.05s;
+}
+
+/* состояние после like */
+
+.heart__button .like-icon .heart .contour {
+  fill: var(--theme-mainColor);
+}
+
+.heart__button .like-icon .sparks {
+  fill: var(--heart-fill);
+  opacity: 0;
+}
+
+.heart__button .like-icon.is-liked .heart .core {
+  fill: var(--heart-fill);
+  transition: fill 0.3s;
+}
+
+.heart__button .like-icon.is-liked .heart .main-body {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.05s;
+}
+
+.heart__button .like-icon.is-liked .heart .contour {
+  fill: var(--heart-fill);
+  transition: fill 0.3s 0.06s;
+}
+
+.heart__button .like-icon.is-liked .heart {
+  animation: scale 0.3s ease-in 0.1s backwards;
+}
+
+@keyframes scale {
+  from {
+    transform-origin: center;
+    transform: scale(1);
+  }
+  to {
+    transform-origin: center;
+    transform: scale(1.5);
+  }
+}
+
+.heart__button .like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s backwards;
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* end of heart animation */
+
+.text__button {
+  position: relative;
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  width: 130px;
+  height: 38px;
+  border: 2px solid var(--theme-mainColor);
+  background-color: var(--background-color);
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0px 0px 0px 0px var(--theme-mainColor);
+  transition: box-shadow 0.3s;
+}
+
+.text__button:focus {
+  box-shadow: 2px 2px 0px 0px var(--theme-mainColor);
+}
+
+.text__button::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  background-color: var(--theme-mainColor);
+  animation: button__background__out 0.5s ease-in-out forwards;
+}
+
+.text__button:hover::before {
+  animation: button__background__in 0.5s ease-in-out forwards;
+}
+
+@keyframes button__background__in {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes button__background__out {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
+
+.text__button__text-basic {
+  opacity: 0;
+}
+
+.text__button__text {
+  position: absolute;
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  top: 11px;
+  left: 0px;
+  width: 130px;
+  height: 38px;
+  z-index: 1;
+  color: var(--button-textColor);
+  mix-blend-mode: difference;
+}
+
+.footer {
+  background-color: var(--background-color);
+  margin-block-start: 54px;
+  margin-block-end: 105px;
+}
+
+.footer__button {
+  position: relative;
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--theme-mainColor);
+  gap: 8px;
+  cursor: pointer;
+  outline: none;
+  transition: box-shadow 0.3s;
+}
+
+.footer__button:focus {
+  box-shadow: 2px 2px 0px 0px var(--theme-mainColor);
+}
+
+.footer__button::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  background-color: var(--theme-mainColor);
+  animation: button__background__out 0.5s ease-in-out forwards;
+}
+
+.footer__button:hover::before {
+  animation: button__background__in 0.5s ease-in-out forwards;
+}
+
+.footer__button__img {
+  position: absolute;
+  z-index: 1;
+  fill: var(--button-textColor);
+  mix-blend-mode: difference;
+}
+
+.footer__button__text {
+  position: absolute;
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  z-index: 1;
+  color: var(--button-textColor);
+  mix-blend-mode: difference;
+}
+
+dialog::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.popup {
+  background-color: var(--background-color);
+  border: 2px solid var(--theme-mainColor);
+  padding: 0;
+}
+
+.popup-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-container {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-block-start: 32px;
+}
+
+.popup-floppy {
+  fill: var(--theme-mainColor);
+  width: 39px;
+  height: 39px;
+}
+
+.popup-text {
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: var(--theme-mainColor);
+  background-color: var(--background-color);
+}
+
+.popup-button {
+  font-family: "Press Start 2P";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  text-transform: uppercase;
+  color: var(--theme-mainColor);
+  border: 2px solid var(--theme-mainColor);
+  background-color: var(--background-color);
+  height: 38px;
+  padding: 9px 17px;
+  cursor: pointer;
+  margin-block-end: 32px;
+}
+
