--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,188 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+/* блок стилей для сердца и кнопки like */
+
+.heart__button {
+    background-color: var(--background-color);
+    cursor: pointer;
+    outline: none;
+    border: none;
+    height: 38px;
+    transition: border 0.3s ease, fill 3s;
+  }
+  
+  .heart__button:focus {
+    outline: none;
+    border: none;
+  }
+  
+  .heart__button:focus-visible {
+    outline: none;
+    border: 2px solid var(--theme-mainColor);
+  }
+  
+  .heart-svg {
+    width: 39px;
+    height: 36px;
+  }
+  
+  /* состояния после наведения и активации */
+  
+  .heart__button .like-icon .heart .core {
+    fill: var(--background-color);
+    transition: fill 0.3s linear 0.03s;
+  }
+  
+  .heart__button:hover .like-icon .heart .core {
+    fill: var(--theme-mainColor);
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button:active .like-icon .heart .core {
+    fill: var(--heart-fill);
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button .like-icon .heart .main-body {
+    fill: var(--background-color);
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button:hover .like-icon .heart .main-body {
+    fill: var(--theme-mainColor);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  .heart__button:active .like-icon .heart .main-body {
+    fill: var(--heart-fill);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  /* состояние после like */
+  
+  .heart__button .like-icon .heart .contour {
+    fill: var(--theme-mainColor);
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button .like-icon .sparks {
+    fill: var(--heart-fill);
+    opacity: 0;
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button .like-icon.is-liked .heart .core {
+    fill: var(--heart-fill);
+    transition: fill 0.3s linear;
+  }
+  
+  .heart__button .like-icon.is-liked .heart .main-body {
+    fill: var(--heart-fill);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  .heart__button .like-icon.is-liked .heart .contour {
+    fill: var(--heart-fill);
+    transition: fill 0.3s linear 0.06s;
+  }
+  
+  .heart__button .like-icon.is-liked .heart {
+    animation: scale 0.3s ease-in 0.1s backwards;
+  }
+  
+  @keyframes scale {
+    from {
+      transform-origin: center;
+      transform: scale(1);
+    }
+    to {
+      transform-origin: center;
+      transform: scale(1.5);
+    }
+  }
+  
+  .heart__button .like-icon.is-liked .sparks {
+    animation: sparks 0.3s ease-in 0.3s backwards;
+  }
+  
+  @keyframes sparks {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  /* end of heart animation */
+  
+  .text__button {
+    position: relative;
+    font-family: var(--font-additional), Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: var(--font-basic-weight-text);
+    line-height: 90%;
+    width: 130px;
+    height: 38px;
+    border: 2px solid var(--theme-mainColor);
+    background-color: var(--background-color);
+    cursor: pointer;
+    outline: none;
+    transition: box-shadow 0.3s linear;
+  }
+  
+  .text__button:focus-visible {
+    box-shadow: 2px 2px 0px 0px var(--theme-mainColor);
+  }
+  
+  .text__button::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    background-color: var(--theme-mainColor);
+    animation: button__background__out 0.5s ease-in-out forwards;
+  }
+  
+  .text__button:hover::before {
+    animation: button__background__in 0.5s ease-in-out forwards;
+  }
+  
+  @keyframes button__background__in {
+    from {
+      width: 0%;
+    }
+    to {
+      width: 100%;
+    }
+  }
+  
+  @keyframes button__background__out {
+    from {
+      width: 100%;
+    }
+    to {
+      width: 0%;
+    }
+  }
+  
+  .text__button__text-basic {
+    opacity: 0;
+  }
+  
+  .text__button__text {
+    font-family: var(--font-additional), Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: var(--font-basic-weight-text);
+    line-height: 90%;
+    z-index: 1;
+    color: var(--button-textColor);
+    mix-blend-mode: difference;
+  }
+  
+  /* окончание стилизации блока с like */
