--- a/styles/themes.css
+++ b/styles/themes.css
@@ -14,8 +14,9 @@
     --theme-mainColor: #00CC14;
     --button-textColor: #00CC14;
     --heart-fill: red;
-    --background-image-1: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
-    --background-image-2: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);
+    --background-image-horizontal: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
+    --background-image-vertical: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);
+    --background-image-general: linear-gradient(0deg,rgb(0,67,6,1),rgb(0,127,12,1));
     --header-block-min: 375px;
     --header-block-mid: calc(100% * 696 / (696 + 372 * 2));
     --header-block-max: 696px;
@@ -35,8 +36,9 @@
     --theme-mainColor: #00CC14;
     --button-textColor: #00CC14;
     --heart-fill: red;
-    --background-image-1: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
-    --background-image-2: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);
+    --background-image-horizontal: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
+    --background-image-vertical: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);
+    --background-image-general: linear-gradient(0deg,rgb(0,67,6,1),rgb(0,127,12,1));
     --header-block-min: 375px;
     --header-block-mid: calc(100% * 696 / (696 + 372 * 2));
     --header-block-max: 696px;
@@ -52,8 +54,9 @@
     --theme-mainColor: #000;
     --button-textColor: #FFF;
     --heart-fill: red;
-    --background-image-1: repeating-linear-gradient(90deg,#d3d3d3 0px,#d3d3d3 2px, rgb(211 211 211 / 0) 2px,rgb(211 211 211/0) 4px);
-    --background-image-2: repeating-linear-gradient(0deg,#e7e7e7 0px,#e7e7e7 2px,#1a1a1a 2px,#1a1a1a 4px);
+    --background-image-horizontal: repeating-linear-gradient(90deg,#d3d3d3 0px,#d3d3d3 2px, rgb(211 211 211 / 0) 2px,rgb(211 211 211/0) 4px);
+    --background-image-vertical: repeating-linear-gradient(0deg,#e7e7e7 0px,#e7e7e7 2px,#1a1a1a 2px,#1a1a1a 4px);
+    --background-image-general: linear-gradient(0deg,rgb(26,26,26,1), rgb(231,231,231,1));
     --header-block-min: 375px;
     --header-block-mid: calc(100% * 696 / (696 + 372 * 2));
     --header-block-max: 696px;
@@ -73,8 +76,9 @@
     --theme-mainColor: #000;
     --button-textColor: #FFF;
     --heart-fill: red;
-    --background-image-1: repeating-linear-gradient(90deg,#d3d3d3 0px,#d3d3d3 2px, rgb(211 211 211 / 0) 2px,rgb(211 211 211/0) 4px);
-    --background-image-2: repeating-linear-gradient(0deg,#e7e7e7 0px,#e7e7e7 2px,#1a1a1a 2px,#1a1a1a 4px);
+    --background-image-horizontal: repeating-linear-gradient(90deg,#d3d3d3 0px,#d3d3d3 2px, rgb(211 211 211 / 0) 2px,rgb(211 211 211/0) 4px);
+    --background-image-vertical: repeating-linear-gradient(0deg,#e7e7e7 0px,#e7e7e7 2px,#1a1a1a 2px,#1a1a1a 4px);
+    --background-image-general: linear-gradient(0deg,rgb(26,26,26,1), rgb(231,231,231,1));
     --header-block-min: 375px;
     --header-block-mid: calc(100% * 696 / (696 + 372 * 2));
     --header-block-max: 696px;
@@ -91,8 +95,9 @@
     --theme-mainColor: #00CC14;
     --button-textColor: #00CC14;
     --heart-fill: red;
-    --background-image-1: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
-    --background-image-2: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);
+    --background-image-horizontal: repeating-linear-gradient(90deg,#000 0px,#000 2px,rgb(0 0 0 / 0) 2px,rgb(0 0 0 / 0) 4px);
+    --background-image-vertical: repeating-linear-gradient(0deg,#007f0c 0px,#007f0c 2px,#004306 2px,#004306 4px);--header-block-min: 375px;
+    --background-image-general: linear-gradient(0deg,rgb(0,67,6,1),rgb(0,127,12,1));
     --header-block-min: 375px;
     --header-block-mid: calc(100% * 696 / (696 + 372 * 2));
     --header-block-max: 696px;
