--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,8 +8,10 @@
   
   @font-face {
     font-family: 'Inter';
-    src: url(./Inter-Variable.woff2) format('woff2 supports variations');
+    src: 
+      url(./Inter-Variable.woff2) format('woff2 supports variations'), 
+      url(./Inter-Variable.woff2) format('woff2-variations');
     font-display: swap;
-    font-weight: 400, 465, 700, 785;
+    font-weight: 465, 785;
     font-style: normal;
   }
