--- a/styles/animations.css
+++ b/styles/animations.css
@@ -100,7 +100,7 @@
   }
   
   .heart__button .like-icon.is-liked .heart {
-    animation: scale 0.3s ease-in 0.1s;
+    animation: scale 0.3s ease-in 0.1s backwards;
   }
   
   @keyframes scale {
@@ -156,11 +156,11 @@
     left: 0px;
     height: 100%;
     background-color: var(--theme-mainColor);
-    animation: button__background__out 0.5s ease-in-out;
+    animation: button__background__out 0.5s ease-in-out forwards;
   }
   
   .text__button:hover::before {
-    animation: button__background__in 0.5s ease-in-out;
+    animation: button__background__in 0.5s ease-in-out forwards;
   }
   
   @keyframes button__background__in {
