--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,11 @@
     margin-block-start: 120px;
   }
 
+  .theme-menu__list {
+    padding-block-start: 1px;
+    padding-inline-start: 20px;
+  }
+
   .card {
     width: 100%;
   }
@@ -104,6 +109,11 @@
 
   .logo__title {
     margin-block-start: 136px;
+  }
+
+  .theme-menu__list {
+    padding-block-start: 2px;
+    padding-inline-start: 12px;
   }
 
   .card {
@@ -197,10 +207,6 @@
   margin-block-start: 19px;
 }
 
-.letter-uppercase {
-  text-transform: uppercase;
-}
-
 .theme-menu__list {
   display: flex;
   flex-direction: column;
@@ -270,7 +276,7 @@
 }
 
 .main {
-  margin-block-start: 100px;
+  margin-block-start: 99px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -403,7 +409,7 @@
   transition: box-shadow 0.3s;
 }
 
-.footer__button:focus {
+.footer__button:focus-visible {
   box-shadow: 2px 2px 0px 0px var(--theme-mainColor);
 }
 
@@ -421,9 +427,12 @@
   animation: button__background__in 0.5s ease-in-out forwards;
 }
 
-.footer__button__img {
-  fill: var(--button-textColor);
-  mix-blend-mode: difference;
+.footer__disk {
+  width: 21px;
+  height: 21px;
+  fill:darkorange;
+  stroke: #000;
+  border: 1px solid #ea42bc;
 }
 
 .footer__button__text {
@@ -461,13 +470,6 @@ dialog::backdrop {
   justify-content: center;
   align-items: center;
   margin-block-start: 32px;
-}
-
-.popup-floppy {
-  fill: var(--theme-mainColor);
-  width: 21px;
-  height: 21px;
-  display: block;
 }
 
 .popup-text {
